picture , content , header update

--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,7 @@
     <meta name="author" content="irstheme">
 
     <title> Juristic - Lawyers and Law Firm HTML Template </title>
-    
+
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -34,18 +35,18 @@
     <!-- start page-wrapper -->
     <div class="page-wrapper">
 
-    <!-- start preloader -->
-    <div class="preloader">
-        <div class="sk-chase">
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-        </div>        
-    </div>
-    <!-- end preloader -->
+        <!-- start preloader -->
+        <div class="preloader">
+            <div class="sk-chase">
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+            </div>
+        </div>
+        <!-- end preloader -->
 
         <!-- Start header -->
         <header id="header" class="site-header header-style-1">
@@ -90,69 +91,20 @@
                     <div id="navbar" class="navbar-collapse collapse navbar-right navigation-holder">
                         <button class="close-navbar"><i class="ti-close"></i></button>
                         <ul class="nav navbar-nav">
-                            <li class="menu-item-has-children">
-                                <a href="#">Home</a>
-                                <ul class="sub-menu">
-                                    <li><a href="index.html">Home Default</a></li>
-                                    <li><a href="index-2.html">Home Style 2</a></li>
-                                    <li><a href="index-3.html">Home Single Lawyer</a></li>
-                                </ul>
+                            <li>
+                                <a href="index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="about.html">About</a>
                             </li>
                             <li class="menu-item-has-children">
-                                <a href="#">Pages</a>
+                                <a href="#">Practice Areas</a>
                                 <ul class="sub-menu">
-                                    <li><a href="about.html">About Company</a></li>
-                                    <li><a href="about-me.html">About Me</a></li>
-                                    <li><a href="testimonials.html">Testimonials</a></li>
-                                    <li><a href="testimonials-s2.html">Testimonials Style 2</a></li>
-                                    <li><a href="team.html">Team</a></li>
-                                    <li><a href="team-single.html">Team Single</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
-                                    <li><a href="404.html">404</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Shop</a>
-                                <ul class="sub-menu">
-                                    <li><a href="shop.html">Shop</a></li>
-                                    <li><a href="shop-single.html">Shop Single</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Services</a>
-                                <ul class="sub-menu">
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-s2.html">Service Style 2</a></li>
                                     <li><a href="service-single.html">Business Law</a></li>
                                     <li><a href="family-law.html">Family Law</a></li>
                                     <li><a href="real-estate-law.html">Real State Law</a></li>
                                     <li><a href="education-law.html">Education Law</a></li>
                                     <li><a href="criminal-law.html">Criminal Law</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Projects</a>
-                                <ul class="sub-menu">
-                                    <li><a href="case-studies.html">Case Studies</a></li>
-                                    <li><a href="case-studies-s2.html">Case Studies Style 2</a></li>
-                                    <li><a href="project-single.html">Case Studies Single</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Blog</a>
-                                <ul class="sub-menu">
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="blog-left-sidebar.html">Blog Left sidebar</a></li>
-                                    <li><a href="blog-fullwidth.html">Blog full width</a></li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#Level3">Blog single</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-single.html">Blog single</a></li>
-                                            <li><a href="blog-single-left-sidebar.html">Blog single Left sidebar</a></li>
-                                            <li><a href="blog-single-fullwidth.html">Blog single full width</a></li>
-                                        </ul>
-                                    </li>
                                 </ul>
                             </li>
                             <li><a href="contact.html">Contact</a></li>
@@ -169,37 +121,6 @@
                                         <button type="submit"><i class="ti-search"></i></button>
                                     </div>
                                 </form>
-                            </div>
-                        </div>
-                        <div class="mini-cart">
-                            <button class="cart-toggle-btn"> <i class="fi flaticon-basket"></i> <span class="cart-count">02</span></button>
-                            <div class="mini-cart-content">
-                                <div class="mini-cart-items">
-                                    <div class="mini-cart-item clearfix">
-                                        <div class="mini-cart-item-image">
-                                            <a href="#"><img src="assets/images/shop/mini-cart/img-1.jpg" alt></a>
-                                        </div>
-                                        <div class="mini-cart-item-des">
-                                            <a href="#">Hoodi with zipper</a>
-                                            <span class="mini-cart-item-price">$20.15</span>
-                                            <span class="mini-cart-item-quantity">x 1</span>
-                                        </div>
-                                    </div>
-                                    <div class="mini-cart-item clearfix">
-                                        <div class="mini-cart-item-image">
-                                            <a href="#"><img src="assets/images/shop/mini-cart/img-2.jpg" alt></a>
-                                        </div>
-                                        <div class="mini-cart-item-des">
-                                            <a href="#">Ninja T-shirt</a>
-                                            <span class="mini-cart-item-price">$13.25</span>
-                                            <span class="mini-cart-item-quantity">x 2</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="mini-cart-action clearfix">
-                                    <span class="mini-checkout-price">$215.14</span>
-                                    <a href="#" class="view-cart-btn">View Cart</a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -219,7 +140,7 @@
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
-        </section>        
+        </section>
         <!-- end page-title -->
 
 
@@ -234,63 +155,84 @@
                             </div>
                             <span>FAQ</span>
                             <h2>Frequently Asked Question</h2>
-                            <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero sit amet adipiscing</p>
+                            <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero sit amet
+                                adipiscing</p>
                         </div>
                     </div>
                 </div>
-                               
+
                 <div class="row">
                     <div class="col col-xs-12">
                         <div class="panel-group faq-accordion theme-accordion-s1" id="accordion">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-1" aria-expanded="true">How to create an account?</a>
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-1"
+                                        aria-expanded="true">How to create an account?</a>
                                 </div>
                                 <div id="collapse-1" class="panel-collapse collapse in">
                                     <div class="panel-body">
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
+                                        <p>It is a long established fact that a reader will be distracted by the
+                                            readable content of a page when looking at its layout. The point of using
+                                            Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+                                            opposed to using 'Content here, content here', making it look like readable
+                                            English. </p>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse-2">How to write the changelog for theme updates?</a>
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
+                                        href="#collapse-2">How to write the changelog for theme updates?</a>
                                 </div>
                                 <div id="collapse-2" class="panel-collapse collapse">
                                     <div class="panel-body">
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
+                                        <p>It is a long established fact that a reader will be distracted by the
+                                            readable content of a page when looking at its layout. The point of using
+                                            Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+                                            opposed to using 'Content here, content here', making it look like readable
+                                            English. </p>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse-3">What happens when my license expires?</a>
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
+                                        href="#collapse-3">What happens when my license expires?</a>
                                 </div>
                                 <div id="collapse-3" class="panel-collapse collapse">
                                     <div class="panel-body">
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
+                                        <p>It is a long established fact that a reader will be distracted by the
+                                            readable content of a page when looking at its layout. The point of using
+                                            Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+                                            opposed to using 'Content here, content here', making it look like readable
+                                            English. </p>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse-4">Do you recommend using a download manager software?</a>
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
+                                        href="#collapse-4">Do you recommend using a download manager software?</a>
                                 </div>
                                 <div id="collapse-4" class="panel-collapse collapse">
                                     <div class="panel-body">
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
+                                        <p>It is a long established fact that a reader will be distracted by the
+                                            readable content of a page when looking at its layout. The point of using
+                                            Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+                                            opposed to using 'Content here, content here', making it look like readable
+                                            English. </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>    
+                </div>
             </div> <!-- end container -->
-        </section> 
-        <!-- end faq-pg-section -->       
+        </section>
+        <!-- end faq-pg-section -->
 
 
         <!-- start site-footer -->
@@ -316,7 +258,8 @@
                                         <h3>Newsletter</h3>
                                         <form>
                                             <div class="input-1">
-                                                <input type="email" class="form-control" placeholder="Email Address *" required="">
+                                                <input type="email" class="form-control" placeholder="Email Address *"
+                                                    required="">
                                             </div>
                                             <div class="submit clearfix">
                                                 <button type="submit"><i class="fi flaticon-paper-plane"></i></button>
@@ -337,7 +280,8 @@
                                 <div class="widget-title">
                                     <h3>About us</h3>
                                 </div>
-                                <p>Showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm</p>
+                                <p>Showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy
+                                    fur muff that covered the whole of her lower arm</p>
                             </div>
                         </div>
                         <div class="col col-lg-3 col-md-3 col-sm-6">
@@ -424,4 +368,5 @@
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
