--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,7 @@
     <meta name="author" content="irstheme">
 
     <title> Juristic - Lawyers and Law Firm HTML Template </title>
-    
+
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -34,18 +35,18 @@
     <!-- start page-wrapper -->
     <div class="page-wrapper">
 
-    <!-- start preloader -->
-    <div class="preloader">
-        <div class="sk-chase">
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-            <div class="sk-chase-dot"></div>
-        </div>        
-    </div>
-    <!-- end preloader -->
+        <!-- start preloader -->
+        <div class="preloader">
+            <div class="sk-chase">
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+                <div class="sk-chase-dot"></div>
+            </div>
+        </div>
+        <!-- end preloader -->
 
         <!-- Start header -->
         <header id="header" class="site-header header-style-1">
@@ -90,69 +91,20 @@
                     <div id="navbar" class="navbar-collapse collapse navbar-right navigation-holder">
                         <button class="close-navbar"><i class="ti-close"></i></button>
                         <ul class="nav navbar-nav">
-                            <li class="menu-item-has-children">
-                                <a href="#">Home</a>
-                                <ul class="sub-menu">
-                                    <li><a href="index.html">Home Default</a></li>
-                                    <li><a href="index-2.html">Home Style 2</a></li>
-                                    <li><a href="index-3.html">Home Single Lawyer</a></li>
-                                </ul>
+                            <li>
+                                <a href="index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="about.html">About</a>
                             </li>
                             <li class="menu-item-has-children">
-                                <a href="#">Pages</a>
+                                <a href="#">Practice Areas</a>
                                 <ul class="sub-menu">
-                                    <li><a href="about.html">About Company</a></li>
-                                    <li><a href="about-me.html">About Me</a></li>
-                                    <li><a href="testimonials.html">Testimonials</a></li>
-                                    <li><a href="testimonials-s2.html">Testimonials Style 2</a></li>
-                                    <li><a href="team.html">Team</a></li>
-                                    <li><a href="team-single.html">Team Single</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
-                                    <li><a href="404.html">404</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Shop</a>
-                                <ul class="sub-menu">
-                                    <li><a href="shop.html">Shop</a></li>
-                                    <li><a href="shop-single.html">Shop Single</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Services</a>
-                                <ul class="sub-menu">
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-s2.html">Service Style 2</a></li>
                                     <li><a href="service-single.html">Business Law</a></li>
                                     <li><a href="family-law.html">Family Law</a></li>
                                     <li><a href="real-estate-law.html">Real State Law</a></li>
                                     <li><a href="education-law.html">Education Law</a></li>
                                     <li><a href="criminal-law.html">Criminal Law</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Projects</a>
-                                <ul class="sub-menu">
-                                    <li><a href="case-studies.html">Case Studies</a></li>
-                                    <li><a href="case-studies-s2.html">Case Studies Style 2</a></li>
-                                    <li><a href="project-single.html">Case Studies Single</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Blog</a>
-                                <ul class="sub-menu">
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="blog-left-sidebar.html">Blog Left sidebar</a></li>
-                                    <li><a href="blog-fullwidth.html">Blog full width</a></li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#Level3">Blog single</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-single.html">Blog single</a></li>
-                                            <li><a href="blog-single-left-sidebar.html">Blog single Left sidebar</a></li>
-                                            <li><a href="blog-single-fullwidth.html">Blog single full width</a></li>
-                                        </ul>
-                                    </li>
                                 </ul>
                             </li>
                             <li><a href="contact.html">Contact</a></li>
@@ -169,37 +121,6 @@
                                         <button type="submit"><i class="ti-search"></i></button>
                                     </div>
                                 </form>
-                            </div>
-                        </div>
-                        <div class="mini-cart">
-                            <button class="cart-toggle-btn"> <i class="fi flaticon-basket"></i> <span class="cart-count">02</span></button>
-                            <div class="mini-cart-content">
-                                <div class="mini-cart-items">
-                                    <div class="mini-cart-item clearfix">
-                                        <div class="mini-cart-item-image">
-                                            <a href="#"><img src="assets/images/shop/mini-cart/img-1.jpg" alt></a>
-                                        </div>
-                                        <div class="mini-cart-item-des">
-                                            <a href="#">Hoodi with zipper</a>
-                                            <span class="mini-cart-item-price">$20.15</span>
-                                            <span class="mini-cart-item-quantity">x 1</span>
-                                        </div>
-                                    </div>
-                                    <div class="mini-cart-item clearfix">
-                                        <div class="mini-cart-item-image">
-                                            <a href="#"><img src="assets/images/shop/mini-cart/img-2.jpg" alt></a>
-                                        </div>
-                                        <div class="mini-cart-item-des">
-                                            <a href="#">Ninja T-shirt</a>
-                                            <span class="mini-cart-item-price">$13.25</span>
-                                            <span class="mini-cart-item-quantity">x 2</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="mini-cart-action clearfix">
-                                    <span class="mini-checkout-price">$215.14</span>
-                                    <a href="#" class="view-cart-btn">View Cart</a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -219,7 +140,7 @@
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
-        </section>        
+        </section>
         <!-- end page-title -->
 
 
@@ -259,7 +180,9 @@
                         </div>
                         <span>Contact form</span>
                         <h2>Need Consultancy, <br>Request A Free Quote</h2>
-                        <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nuncIt showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy</p>
+                        <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing
+                            sem neque sed ipsum. Nam quam nuncIt showed a lady fitted out with a fur hat and fur boa who
+                            sat upright, raising a heavy</p>
                     </div>
 
                     <div class="contact-form">
@@ -282,7 +205,8 @@
                                 </select>
                             </div>
                             <div class="fullwidth">
-                                <textarea class="form-control" name="note"  id="note" placeholder="Case Description..."></textarea>
+                                <textarea class="form-control" name="note" id="note"
+                                    placeholder="Case Description..."></textarea>
                             </div>
                             <div class="submit-area">
                                 <button type="submit" class="theme-btn">Submit It Now</button>
@@ -299,14 +223,16 @@
                 </div>
             </div> <!-- end content-area -->
         </section>
-        <!-- end contact-section-s3 -->  
+        <!-- end contact-section-s3 -->
 
 
         <!--  start contact-map -->
         <section class="contact-map-section">
             <h2 class="hidden">Contact map</h2>
             <div class="contact-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.9147703055!2d-74.11976314309273!3d40.69740344223377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbd!4v1547528325671" allowfullscreen></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.9147703055!2d-74.11976314309273!3d40.69740344223377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbd!4v1547528325671"
+                    allowfullscreen></iframe>
             </div>
         </section>
         <!-- end contact-map -->
@@ -336,7 +262,8 @@
                                         <h3>Newsletter</h3>
                                         <form>
                                             <div class="input-1">
-                                                <input type="email" class="form-control" placeholder="Email Address *" required="">
+                                                <input type="email" class="form-control" placeholder="Email Address *"
+                                                    required="">
                                             </div>
                                             <div class="submit clearfix">
                                                 <button type="submit"><i class="fi flaticon-paper-plane"></i></button>
@@ -357,7 +284,8 @@
                                 <div class="widget-title">
                                     <h3>About us</h3>
                                 </div>
-                                <p>Showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm</p>
+                                <p>Showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy
+                                    fur muff that covered the whole of her lower arm</p>
                             </div>
                         </div>
                         <div class="col col-lg-3 col-md-3 col-sm-6">
@@ -444,4 +372,5 @@
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
