add images to whole website

--- a/family-law.html
+++ b/family-law.html
@@ -254,7 +254,7 @@
                         <div class="service-sidebar">
                             <div class="widget service-list-widget">
                                 <ul>
-                                    <li><a href="services.html">All Service</a></li>
+                                    <!-- <li><a href="services.html">All Service</a></li> -->
                                     <li><a href="service-single.html">Business Law</a></li>
                                     <li class="current"><a href="family-law.html">Family Law</a></li>
                                     <li><a href="real-estate-law.html">Real Estate Law</a></li>
